# mcp-oauth-proxy

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
deploy/: Caddyfile.example  README.md  home-vm-obsidian-compose.yml  servers.example.json
src/mcp_oauth_proxy/: __init__.py  app.py  backend.py  config.py  hash_cli.py  login_ui.py  provider.py  secret_gate.py  storage.py
tests/: dummy_server.py  test_app_integration.py  test_backend.py  test_config.py  test_hash_cli.py  test_login_ui.py  test_multi_server.py  test_provider_authorize.py  test_provider_dcr.py  test_provider_login_routes.py  test_provider_tokens.py  test_secret_gate.py  test_storage.py
