[project]
name = "mcp-oauth-proxy"
version = "0.0.1"
description = "OAuth 2.1 front end that wraps any stdio MCP server for claude.ai custom connectors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4,<4",
    "pyjwt>=2.9.0",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
mcp-oauth-proxy = "mcp_oauth_proxy:main"
mcp-oauth-proxy-hash = "mcp_oauth_proxy.hash_cli:hash_cli_main"
